--- a/set-neovim-as-kitty's-scrollback-buffer.html
+++ b/set-neovim-as-kitty's-scrollback-buffer.html
@@ -73,18 +73,26 @@
 <span data-line><span style="--shiki-dark:#E1E4E8;--shiki-light:#24292E;">  })</span></span>
 <span data-line><span style="--shiki-dark:#F97583;--shiki-light:#D73A49;">end</span></span></code></pre></figure>
 <h1 id="references">references<a role="anchor" aria-hidden="true" tabindex="-1" data-no-popover="true" href="#references" class="internal"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg></a></h1>
+<ul>
+<li>
 <p><a href="https://gist.github.com/galaxia4Eva/9e91c4f275554b4bd844b6feece16b3d" class="external alias">nvim pager for kitty history · GitHub</a></p>
+</li>
+<li>
 <p><a href="https://github.com/mikesmithgh/kitty-scrollback.nvim?tab=readme-ov-file#-quickstart" class="external alias">GitHub - mikesmithgh/kitty-scrollback.nvim: 😽 Open your Kitty scrollback buffer with Neovim. Ameowzing!</a></p>
+</li>
+</ul>
 <h1 id="to-explore">to explore<a role="anchor" aria-hidden="true" tabindex="-1" data-no-popover="true" href="#to-explore" class="internal"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg></a></h1>
-<p><a href="https://sw.kovidgoyal.net/kitty/overview/#the-scrollback-buffer" class="external alias">Overview - kitty</a>
-<a href="https://lyz-code.github.io/blue-book/kitty/" class="external alias">kitty - The Blue Book</a>
-<a href="https://github.com/mikesmithgh/kitty-scrollback.nvim" class="external alias">GitHub - mikesmithgh/kitty-scrollback.nvim: 😽 Open your Kitty scrollback buffer with Neovim. Ameowzing!</a>
-<a href="https://github.com/kovidgoyal/kitty/issues/719" class="external alias">Feature Request: Ability to select text with the keyboard (vim-like) · Issue #719 · kovidgoyal/kitty · GitHub</a>
-<a href="https://github.com/kovidgoyal/kitty/discussions/6485" class="external alias">Vi mode for kitty · kovidgoyal/kitty · Discussion #6485 · GitHub</a>
-<a href="https://github.com/kovidgoyal/kitty/issues/2327" class="external alias">[Question] How to use neovim (or vim) as scrollback pager? · Issue #2327 · kovidgoyal/kitty · GitHub</a>
-<a href="https://www.reddit.com/r/KittyTerminal/comments/159mekd/excellent_vi_mode_for_kitty_terminal/" class="external alias">Excellent vi mode for kitty terminal : reddit</a>
-<a href="https://github.com/kovidgoyal/kitty/discussions/6485" class="external alias">Vi mode for kitty · kovidgoyal/kitty · Discussion #6485 · GitHub</a>
-<a href="https://github.com/kovidgoyal/kitty/discussions/3904" class="external alias">kitty vi mode, like alacritty · kovidgoyal/kitty · Discussion #3904 · GitHub</a></p></article></div><div class="right sidebar"><div class="backlinks"><h3>Backlinks</h3><ul class="overflow"><li><a href="./" class="internal">‎</a></li></ul></div></div></div><footer class><hr/><ul></ul></footer></div></body><script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/copy-tex.min.js" type="application/javascript"></script><script type="application/javascript">function c(){let t=this.parentElement;t.classList.toggle("is-collapsed");let l=t.classList.contains("is-collapsed")?this.scrollHeight:t.scrollHeight;t.style.maxHeight=l+"px";let o=t,e=t.parentElement;for(;e;){if(!e.classList.contains("callout"))return;let n=e.classList.contains("is-collapsed")?e.scrollHeight:e.scrollHeight+o.scrollHeight;e.style.maxHeight=n+"px",o=e,e=e.parentElement}}function i(){let t=document.getElementsByClassName("callout is-collapsible");for(let s of t){let l=s.firstElementChild;if(l){l.addEventListener("click",c),window.addCleanup(()=>l.removeEventListener("click",c));let e=s.classList.contains("is-collapsed")?l.scrollHeight:s.scrollHeight;s.style.maxHeight=e+"px"}}}document.addEventListener("nav",i);window.addEventListener("resize",i);
+<ul>
+<li><a href="https://sw.kovidgoyal.net/kitty/overview/#the-scrollback-buffer" class="external alias">Overview - kitty</a></li>
+<li><a href="https://lyz-code.github.io/blue-book/kitty/" class="external alias">kitty - The Blue Book</a></li>
+<li><a href="https://github.com/mikesmithgh/kitty-scrollback.nvim" class="external alias">GitHub - mikesmithgh/kitty-scrollback.nvim: 😽 Open your Kitty scrollback buffer with Neovim. Ameowzing!</a></li>
+<li><a href="https://github.com/kovidgoyal/kitty/issues/719" class="external alias">Feature Request: Ability to select text with the keyboard (vim-like) · Issue #719 · kovidgoyal/kitty · GitHub</a></li>
+<li><a href="https://github.com/kovidgoyal/kitty/discussions/6485" class="external alias">Vi mode for kitty · kovidgoyal/kitty · Discussion #6485 · GitHub</a></li>
+<li><a href="https://github.com/kovidgoyal/kitty/issues/2327" class="external alias">[Question] How to use neovim (or vim) as scrollback pager? · Issue #2327 · kovidgoyal/kitty · GitHub</a></li>
+<li><a href="https://www.reddit.com/r/KittyTerminal/comments/159mekd/excellent_vi_mode_for_kitty_terminal/" class="external alias">Excellent vi mode for kitty terminal : reddit</a></li>
+<li><a href="https://github.com/kovidgoyal/kitty/discussions/6485" class="external alias">Vi mode for kitty · kovidgoyal/kitty · Discussion #6485 · GitHub</a></li>
+<li><a href="https://github.com/kovidgoyal/kitty/discussions/3904" class="external alias">kitty vi mode, like alacritty · kovidgoyal/kitty · Discussion #3904 · GitHub</a></li>
+</ul></article></div><div class="right sidebar"><div class="backlinks"><h3>Backlinks</h3><ul class="overflow"><li><a href="./" class="internal">‎</a></li></ul></div></div></div><footer class><hr/><ul></ul></footer></div></body><script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/copy-tex.min.js" type="application/javascript"></script><script type="application/javascript">function c(){let t=this.parentElement;t.classList.toggle("is-collapsed");let l=t.classList.contains("is-collapsed")?this.scrollHeight:t.scrollHeight;t.style.maxHeight=l+"px";let o=t,e=t.parentElement;for(;e;){if(!e.classList.contains("callout"))return;let n=e.classList.contains("is-collapsed")?e.scrollHeight:e.scrollHeight+o.scrollHeight;e.style.maxHeight=n+"px",o=e,e=e.parentElement}}function i(){let t=document.getElementsByClassName("callout is-collapsible");for(let s of t){let l=s.firstElementChild;if(l){l.addEventListener("click",c),window.addCleanup(()=>l.removeEventListener("click",c));let e=s.classList.contains("is-collapsed")?l.scrollHeight:s.scrollHeight;s.style.maxHeight=e+"px"}}}document.addEventListener("nav",i);window.addEventListener("resize",i);
 </script><script type="module">
           let mermaidImport = undefined
           document.addEventListener('nav', async () => {
