--- a/air-quality-monitor.html
+++ b/air-quality-monitor.html
@@ -4,6 +4,7 @@
 <li><a href="https://hubtronics.in/sen54-sdn-t?search=sen54" class="external alias">Buy Sensirion SEN54-SDN-T Environment Sensor for PM, VOC, NOx, RH &amp; T Online In India at HUBTRONICS.in</a>
 <ol>
 <li>can buy <a href="https://hubtronics.in/sensirion/sen55-sdn-t" class="external alias">Buy Sensirion SEN55-SDN-T Environmental Sensor Node Particulate Matter, RH/T, VOC, NOx Online In India at HUBTRONICS.in</a> if you want to see NOx as well. I just bought the one above</li>
+<li>sen66 has co2 but it isn’t available</li>
 </ol>
 </li>
 <li><a href="https://hubtronics.in/6pin-ghr-06v-s-1.25mm-board-to-wire" class="external alias">Buy 6 Pin GHR-06V-S 1.25mm Board to Wire Connector - 15cm Wire Length Online In India at HUBTRONICS.in</a></li>
@@ -16,7 +17,7 @@
 <h1 id="software">software<a role="anchor" aria-hidden="true" tabindex="-1" data-no-popover="true" href="#software" class="internal"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg></a></h1>
 <ol>
 <li>Install esphome</li>
-<li>flash this code:</li>
+<li>flash this code using esphome:</li>
 </ol>
 <figure data-rehype-pretty-code-figure><pre tabindex="0" data-language="yaml" data-theme="github-dark github-light"><code data-language="yaml" data-theme="github-dark github-light" style="display:grid;"><span data-line><span style="--shiki-dark:#85E89D;--shiki-light:#22863A;">esphome</span><span style="--shiki-dark:#E1E4E8;--shiki-light:#24292E;">:</span></span>
 <span data-line><span style="--shiki-dark:#85E89D;--shiki-light:#22863A;">  name</span><span style="--shiki-dark:#E1E4E8;--shiki-light:#24292E;">: </span><span style="--shiki-dark:#9ECBFF;--shiki-light:#032F62;">air-quality-monitor</span></span>
